[gd_scene load_steps=22 format=3 uid="uid://crcc7xn6r8ys5"]

[ext_resource type="Script" path="res://addons/DialogHelperTool/TimelineItem/TimelineItem.gd" id="1_mmygc"]
[ext_resource type="PackedScene" uid="uid://cjcwj2co4fkg1" path="res://addons/DialogHelperTool/Shared/Dropdownbox/Dropdownbox.tscn" id="2_mio6r"]
[ext_resource type="FontFile" uid="uid://s5r7anan68q0" path="res://addons/DialogHelperTool/Res/Fonts/Lato-Bold.ttf" id="2_q13ku"]
[ext_resource type="PackedScene" uid="uid://dsxhvxpevjney" path="res://addons/DialogHelperTool/TimelineItem/TimelineItemButton/TimelineItemButton.tscn" id="4_6f708"]
[ext_resource type="Texture2D" uid="uid://blithjl2sriun" path="res://addons/DialogHelperTool/Res/dialog.svg" id="5_amxjm"]
[ext_resource type="Texture2D" uid="uid://bgn30tt2gc58b" path="res://addons/DialogHelperTool/Res/background_icon.svg" id="5_fkr4x"]
[ext_resource type="Texture2D" uid="uid://uggoc0p11pbx" path="res://addons/DialogHelperTool/Res/script.svg" id="6_8djyk"]
[ext_resource type="Texture2D" uid="uid://ctkjex5827hs4" path="res://addons/DialogHelperTool/Res/stats.svg" id="7_01dba"]
[ext_resource type="Texture2D" uid="uid://dnby00873clae" path="res://addons/DialogHelperTool/Res/sound_1.svg" id="7_atciv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_do1v3"]
bg_color = Color(0, 0, 0.0117647, 0.305882)

[sub_resource type="LabelSettings" id="LabelSettings_b5bax"]
line_spacing = 2.08165e-12
font = ExtResource("2_q13ku")
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 1, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0mmfv"]
content_margin_bottom = 2.0
bg_color = Color(0, 0, 0, 0.345098)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0.188235, 0.937255)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knae5"]
bg_color = Color(0.490196, 0.462745, 1, 0.0705882)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.168627, 0, 0.247059, 0.866667)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bgwo2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_color = Color(0.145098, 0.00392157, 0.231373, 0.839216)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lt6a1"]
content_margin_left = 16.0
content_margin_top = 8.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_color = Color(0.145098, 0.00392157, 0.231373, 0.839216)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yyrft"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amo5b"]
bg_color = Color(0.0431373, 0, 0.14902, 0.552941)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_373xd"]
bg_color = Color(0.0901961, 0, 0.411765, 0.552941)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.14902, 0.156863, 0.156863, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nsxec"]
bg_color = Color(0.0313726, 0.231373, 0.454902, 0.552941)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.658824, 0.513726, 0.0117647, 0.772549)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a7w45"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8h8f0"]
bg_color = Color(0.305882, 0.305882, 0.305882, 0.482353)

[node name="TimelineItem" type="Control"]
custom_minimum_size = Vector2(1080, 40)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mmygc")
control_color_active = Color(0.14902, 0.388235, 0.768627, 0.796078)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_do1v3")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="LeftSpace" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/LeftSpace"]
layout_mode = 2
text = "ID:"
label_settings = SubResource("LabelSettings_b5bax")
horizontal_alignment = 1
vertical_alignment = 3

[node name="EventId" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_0mmfv")
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "JUMP:"
label_settings = SubResource("LabelSettings_b5bax")

[node name="JumpDropdown" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_mio6r")]
custom_minimum_size = Vector2(20, 30)
layout_mode = 2
size_flags_stretch_ratio = 0.25

[node name="TimerCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -8

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
text = "TIMER:"
label_settings = SubResource("LabelSettings_b5bax")

[node name="CenterContainer3" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TimerSpinbox" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterContainer3"]
layout_mode = 2
min_value = 0.01
step = 0.01
value = 1.0

[node name="CharacterCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = -8

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
text = "CHARACTER:"
label_settings = SubResource("LabelSettings_b5bax")
horizontal_alignment = 1
vertical_alignment = 3

[node name="CharacterDropdown" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_mio6r")]
custom_minimum_size = Vector2(40, 30)
layout_mode = 2
size_flags_stretch_ratio = 0.4

[node name="TextButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_6f708")]
layout_mode = 2
tooltip = "Edit event's text"
icon = ExtResource("5_amxjm")

[node name="BackgroundButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_6f708")]
layout_mode = 2
tooltip = "Edit event's background and transition"
icon = ExtResource("5_fkr4x")

[node name="SoundsButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_6f708")]
layout_mode = 2
tooltip = "Play or mute sound"
icon = ExtResource("7_atciv")

[node name="ScriptButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_6f708")]
layout_mode = 2
tooltip = "Edit event's script"
icon = ExtResource("6_8djyk")

[node name="StatsButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("4_6f708")]
layout_mode = 2
tooltip = "Edit event's stats"
icon = ExtResource("7_01dba")

[node name="AudioField" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_knae5")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
text = "  Audio:"
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bgwo2")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlaySound" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlaySoundCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound"]
layout_mode = 2
text = "Play"

[node name="SoundCombobox" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound" instance=ExtResource("2_mio6r")]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4
items = Array[String](["hEhesh", "Helga", "lgahe"])

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound"]
layout_mode = 2
text = "  to channel:  "

[node name="PlaySoundChannel" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.66

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound"]
layout_mode = 2
text = " on bus:  "

[node name="SoundBusCombobox" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound" instance=ExtResource("2_mio6r")]
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.7

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound"]
layout_mode = 2
text = "  Volume: "

[node name="SoundVolume" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.45
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label4" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound"]
layout_mode = 2
text = "  Fade: "

[node name="SoundFade" type="SpinBox" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1000.0
step = 0.01

[node name="StopSound" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StopSoundCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StopSound"]
layout_mode = 2
text = "Stop"

[node name="StopChannel" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StopSound"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 4

[node name="TextField" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 80)
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/TextField"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_knae5")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TextField/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/TextField/Panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 2.08165e-12)
layout_mode = 2
text = "  Text:"
vertical_alignment = 1

[node name="Text" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/TextField/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/background_color = Color(0, 0, 0, 0)
theme_override_styles/normal = SubResource("StyleBoxFlat_lt6a1")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yyrft")
placeholder_text = "Text"
wrap_mode = 1

[node name="BackgroundField" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 110)
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_knae5")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer"]
layout_mode = 2
text = "Background:"

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_bgwo2")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/v_separation = 8
columns = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Name: "

[node name="BackgroundName" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("2_mio6r")]
layout_mode = 2

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Video:"

[node name="VideoName" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("2_mio6r")]
layout_mode = 2

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer"]
layout_mode = 2
text = "Clickable: "

[node name="Clickable" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer" instance=ExtResource("2_mio6r")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Preview" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.63
expand_mode = 1
stretch_mode = 4

[node name="TransitionButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.66
theme_override_styles/normal = SubResource("StyleBoxFlat_amo5b")
theme_override_styles/hover = SubResource("StyleBoxFlat_373xd")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nsxec")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a7w45")
toggle_mode = true
text = "TRANSITION"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = -8
theme_override_constants/margin_top = -2
theme_override_constants/margin_bottom = -2

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8h8f0")

[connection signal="gui_input" from="PanelContainer" to="." method="_on_panel_container_gui_input"]
[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_panel_container_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_panel_container_mouse_exited"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/EventId" to="." method="_on_event_id_text_changed"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/JumpDropdown" to="." method="_on_dropdownbox_item_selected"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TimerCheckbox" to="." method="_on_timer_checkbox_toggled"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CenterContainer3/TimerSpinbox" to="." method="_on_timer_spinbox_value_changed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CharacterCheckbox" to="." method="_on_character_checkbox_toggled"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CharacterDropdown" to="." method="_on_character_dropdown_item_selected"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/TextButton" to="." method="_on_text_button_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BackgroundButton" to="." method="_on_background_button_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SoundsButton" to="." method="_on_sounds_button_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScriptButton" to="." method="_on_script_button_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound/PlaySoundCheckbox" to="." method="_on_play_sound_checkbox_toggled"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound/SoundCombobox" to="." method="_on_sound_combobox_item_selected"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound/PlaySoundChannel" to="." method="_on_play_sound_channel_text_changed"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound/SoundBusCombobox" to="." method="_on_sound_bus_combobox_item_selected"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound/SoundVolume" to="." method="_on_sound_volume_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/PlaySound/SoundFade" to="." method="_on_sound_fade_value_changed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StopSound/StopSoundCheckbox" to="." method="_on_stop_sound_checkbox_toggled"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/AudioField/Panel/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/StopSound/StopChannel" to="." method="_on_stop_channel_text_changed"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/VBoxContainer/TextField/Panel/HBoxContainer/Text" to="." method="_on_text_text_changed"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/BackgroundCheckbox" to="." method="_on_background_checkbox_toggled"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer/BackgroundName" to="." method="_on_background_name_item_selected"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer/VideoName" to="." method="_on_video_name_item_selected"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/GridContainer/Clickable" to="." method="_on_clickable_item_selected"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BackgroundField/Panel/HBoxContainer/PanelContainer/MarginContainer/HBoxContainer/TransitionButton" to="." method="_on_transition_button_pressed"]
